[build-system]
requires = [
    "build",
    "cmake>=3.18",
    "meson",
    "ninja",
    "oldest-supported-numpy",
    "scikit-build>=0.13",
    "setuptools",
    "setuptools_scm",
    "wheel",
]

[project]
name = "bdsf"
dynamic = [
    "version",
    "description",
    "readme",
    "requires-python",
    "authors",
    "classifiers",
    "scripts",
    "dependencies",
    "optional-dependencies",
]

[tool.cibuildwheel]
before-all = "cibuildwheel/before_all.sh"
before-build = "cibuildwheel/before_build.sh"
build = "cp3{7,8,9,10,11,12}-*_x86_64"
build-verbosity = 1
environment = """ \
    BOOST_VERSION="1.81.0" \
    BOOST_BUILD_DIR="/tmp/boost-build" \
    BOOST_INSTALL_DIR="${HOME}/boost" \
    BOOST_ROOT="${BOOST_INSTALL_DIR}" \
    CC=gcc \
    CXX=g++ \
    CXXFLAGS="-I${BOOST_INSTALL_DIR}/include -L${BOOST_INSTALL_DIR}/lib" \
    FC=gfortran \
    LD_LIBRARY_PATH="${BOOST_INSTALL_DIR}/lib" \
"""
test-command = "cd {package}/test && python tbdsf_process_image.py"

[tool.cibuildwheel.macos]
repair-wheel-command = """\
    DYLD_LIBRARY_PATH=${BOOST_INSTALL_DIR}/lib delocate-wheel \
    --require-archs {delocate_archs} -w {dest_dir} -v {wheel}\
"""

[tool.cibuildwheel.linux]
skip = ["*-musllinux_*"]

[tool.setuptools_scm]
version_file = "bdsf/_version.py"